--- a/index.html
+++ b/index.html
@@ -13,29 +13,14 @@
     .middle { grid-column:2; width:100%; }
 
     /* Hero */
-    .hero {
-      display:flex; align-items:center; justify-content:center; gap:20px; flex-wrap:wrap;
-      text-align:center; padding:32px 0;
-    }
+    .hero { display:flex; align-items:center; justify-content:center; gap:20px; flex-wrap:wrap; text-align:center; padding:32px 0; }
     .hero img { max-height: 220px; width:auto; }
     .tagline { margin:6px 0 0; font-size:1.05rem; }
 
-    /* Zähler-Banner – neues Design */
-    .stats-banner {
-      display:flex; align-items:center; gap:14px;
-      margin: 10px auto 0; padding:14px 18px;
-      width: fit-content; max-width: 100%;
-      background: linear-gradient(135deg, #0a7c5b 0%, #12a37d 50%, #0a7c5b 100%);
-      color:#fff; border-radius:16px;
-      box-shadow: 0 10px 24px rgba(10,124,91,.25);
-    }
-    .stats-iconbox {
-      width:40px; height:40px; border-radius:10px;
-      display:flex; align-items:center; justify-content:center;
-      background: rgba(255,255,255,.15);
-      box-shadow: inset 0 0 0 1px rgba(255,255,255,.18);
-    }
-    .stats-icon { font-size:1.3rem; filter: drop-shadow(0 2px 2px rgba(0,0,0,.25)); }
+    /* Zähler-Banner */
+    .stats-banner { display:flex; align-items:center; gap:14px; margin:10px auto 0; padding:14px 18px; width:fit-content; max-width:100%; background:linear-gradient(135deg,#0a7c5b 0%,#12a37d 50%,#0a7c5b 100%); color:#fff; border-radius:16px; box-shadow:0 10px 24px rgba(10,124,91,.25); }
+    .stats-iconbox { width:40px; height:40px; border-radius:10px; display:flex; align-items:center; justify-content:center; background:rgba(255,255,255,.15); box-shadow:inset 0 0 0 1px rgba(255,255,255,.18); }
+    .stats-icon { font-size:1.3rem; filter:drop-shadow(0 2px 2px rgba(0,0,0,.25)); }
     .stats-text { display:flex; flex-direction:column; line-height:1.1; }
     .stats-label { font-size:.9rem; opacity:.95; letter-spacing:.2px; }
     .stats-value { font-weight:800; font-size:2.1rem; line-height:1; margin-top:2px; }
@@ -43,50 +28,38 @@
     .stats-meta { margin-top:6px; font-size:.82rem; opacity:.9; }
     .stats-meta .dot { display:inline-block; width:6px; height:6px; border-radius:50%; background:#fff; opacity:.7; margin:0 8px 1px; vertical-align:middle; }
 
-    @media (max-width: 520px) {
-      .stats-banner { margin-left: auto; margin-right: auto; padding:12px 14px; }
-      .stats-value { font-size:1.7rem; }
-    }
+    @media (max-width:520px){ .stats-banner{ padding:12px 14px } .stats-value{ font-size:1.7rem } }
 
     /* Sektionen */
-    main.middle > section { margin: 32px 0; }
+    main.middle > section { margin:32px 0; }
     .lead { font-size:1.15rem; line-height:1.6; }
-    .grid2 { display:grid; gap:18px; grid-template-columns: 1fr; }
-    @media (min-width: 780px) { .grid2 { grid-template-columns: 1fr 1fr; } }
+    .grid2 { display:grid; gap:18px; grid-template-columns:1fr; }
+    @media (min-width:780px){ .grid2{ grid-template-columns:1fr 1fr } }
 
     /* Karten */
-    .card {
-      border: 1px solid rgba(0,0,0,.08);
-      border-radius: 12px; padding:18px;
-      background:#fff; box-shadow: 0 2px 10px rgba(0,0,0,.04);
-    }
+    .card { border:1px solid rgba(0,0,0,.08); border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04); }
     .card h3 { margin-top:0 }
 
-    /* Callouts */
-    .callout {
-      border-left: 4px solid #f6b10a; background:#fff8e1; padding:14px 16px; border-radius:8px;
-    }
+    /* Callout */
+    .callout { border-left:4px solid #f6b10a; background:#fff8e1; padding:14px 16px; border-radius:8px; }
 
     /* CTA-Buttons */
     .cta { display:inline-block; padding:12px 16px; border-radius:10px; text-decoration:none; }
     .cta.primary { background:#0a7c5b; color:#fff; }
     .cta.secondary { background:#e9f5f1; color:#0a7c5b; }
 
-    /* Downloadleiste */
-    .downloads a { display:inline-block; margin-right:12px; margin-bottom:8px; }
-
-    /* Responsive Video */
-    .video-wrap { position:relative; width:100%; aspect-ratio:16 / 9; background:#000; border-radius:12px; overflow:hidden; box-shadow:0 2px 10px rgba(0,0,0,.06); margin-bottom:18px; }
+    /* Video */
+    .video-wrap { position:relative; width:100%; aspect-ratio:16/9; background:#000; border-radius:12px; overflow:hidden; box-shadow:0 2px 10px rgba(0,0,0,.06); margin-bottom:18px; }
     .video-wrap iframe { position:absolute; inset:0; width:100%; height:100%; border:0; }
 
     /* Partner / Träger */
-    .partner { border: 1px solid rgba(0,0,0,.08); border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04); }
+    .partner { border:1px solid rgba(0,0,0,.08); border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04); }
     .partner h2 { margin-top:0; }
-    .orgs { display:grid; gap:18px; grid-template-columns: 1fr; align-items:start; }
-    @media (min-width: 780px) { .orgs { grid-template-columns: 1fr 1fr; } }
-    .org { display:grid; grid-template-columns: 80px 1fr; gap:14px; align-items:start; }
+    .orgs { display:grid; gap:18px; grid-template-columns:1fr; align-items:start; }
+    @media (min-width:780px){ .orgs{ grid-template-columns:1fr 1fr } }
+    .org { display:grid; grid-template-columns:80px 1fr; gap:14px; align-items:start; }
     .org .logoBox { display:flex; align-items:center; justify-content:center; background:#f9fafb; border:1px solid #e5e7eb; border-radius:10px; padding:10px; }
-    .org img { max-width: 100%; height: auto; display:block; }
+    .org img { max-width:100%; height:auto; display:block; }
     .org h3 { margin:0 0 6px; font-size:1.05rem; }
     .org p { margin:0 0 10px; }
     .org a { color:#0a7c5b; text-decoration:none; }
@@ -99,7 +72,6 @@
 <body>
 
   <div class="page">
-
     <header class="site-header middle">
       <div class="hero">
         <img src="assets/SolarstromGasstromTitel.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
@@ -115,14 +87,10 @@
 
       <!-- Live-Zähler: erzeugte PDF-Briefe -->
       <div class="stats-banner" role="status" aria-live="polite">
-        <div class="stats-iconbox">
-          <div class="stats-icon" aria-hidden="true">📄</div>
-        </div>
+        <div class="stats-iconbox"><div class="stats-icon" aria-hidden="true">📄</div></div>
         <div class="stats-text">
           <div class="stats-label">Erzeugte PDF-Briefe</div>
-          <div class="stats-value">
-            <span id="pdfCount" class="count">–</span>
-          </div>
+          <div class="stats-value"><span id="pdfCount" class="count">–</span></div>
           <div class="stats-meta" id="statsMeta" hidden>
             <span class="dot" aria-hidden="true"></span>
             <span id="statsTime">Stand: –</span>
@@ -132,7 +100,6 @@
     </header>
 
     <main class="middle">
-
       <!-- Einleitung -->
       <section id="intro">
         <p class="lead">
@@ -140,70 +107,32 @@
           Weniger Ausbau bedeutet: Bürger und Unternehmen mit höheren Stromkosten belasten, den Wirtschaftsstandort Deutschland schwächen, die Abhängigkeit von fossilen Importen aus unzuverlässigen Staaten verlängern und das Klimaziel gefährden.
           Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: <em>„Für uns ist klar: Energie muss bezahlbar, sicher und sauber sein“</em>.
         </p>
-        <div class="callout">
-          <strong>Kernaussage:</strong> Solarstrom senkt Kosten, erhöht Versorgungssicherheit und schützt Klima &amp; Gesundheit.
-        </div>
+        <div class="callout"><strong>Kernaussage:</strong> Solarstrom senkt Kosten, erhöht Versorgungssicherheit und schützt Klima &amp; Gesundheit.</div>
       </section>
 
       <!-- Aktuelle Sendung -->
       <section id="sendung">
         <h2>Der Kampagenenstart</h2>
-
-        <!-- Einzelvideo -->
         <div class="video-wrap">
-          <iframe
-            src="https://www.youtube-nocookie.com/embed//lzq9l2sW6Lo"
-            title="Solarstrom statt Erdgas-Strom – Der Kampagenenstart"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen>
-          </iframe>
+          <iframe src="https://www.youtube-nocookie.com/embed//lzq9l2sW6Lo" title="Solarstrom statt Erdgas-Strom – Der Kampagenenstart" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <p style="margin-top:10px"><a class="cta secondary" href="https://youtu.be/hrUNTbE8zKQ" target="_blank" rel="noopener">Auf YouTube ansehen</a></p>
 
-        <p style="margin-top:10px">
-          <a class="cta secondary" href="https://youtu.be/hrUNTbE8zKQ" target="_blank" rel="noopener">
-            Auf YouTube ansehen
-          </a>
-        </p>
-
-        <!-- Playlist -->
         <h3 style="margin-top:30px;">Weitere Beiträge der Aktion</h3>
         <div class="video-wrap">
-          <iframe
-            src="https://www.youtube-nocookie.com/embed/videoseries?list=PLu9ITSfqUeKtQ50y9FI0tNJ2moLuKDDAc"
-            title="YouTube-Playlist: Aktion Solarstrom statt Erdgas-Strom"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen>
-          </iframe>
+          <iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=PLu9ITSfqUeKtQ50y9FI0tNJ2moLuKDDAc" title="YouTube-Playlist: Aktion Solarstrom statt Erdgas-Strom" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <p style="margin-top:10px">
-          <a class="cta secondary" href="https://www.youtube.com/playlist?list=PLu9ITSfqUeKtQ50y9FI0tNJ2moLuKDDAc" target="_blank" rel="noopener">
-            Ganze Playlist auf YouTube ansehen
-          </a>
-        </p>
+        <p style="margin-top:10px"><a class="cta secondary" href="https://www.youtube.com/playlist?list=PLu9ITSfqUeKtQ50y9FI0tNJ2moLuKDDAc" target="_blank" rel="noopener">Ganze Playlist auf YouTube ansehen</a></p>
       </section>
 
-      <!-- Ziele / Forderungen -->
+      <!-- Ziele -->
       <section id="ziele">
         <h2>Kernforderungen</h2>
         <div class="grid2">
-          <div class="card">
-            <h3>1. Keine neuen Erdgaskraftwerke</h3>
-            <p>Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.</p>
-          </div>
-          <div class="card">
-            <h3>2. Ausbau Erneuerbarer beschleunigen</h3>
-            <p>und netzdienliche Erzeugung belohnen.</p>
-          </div>
-          <div class="card">
-            <h3>3. Feste Einspeisevergütung beibehalten</h3>
-            <p>bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.</p>
-          </div>
-          <div class="card">
-            <h3>4. Bestandsschutz</h3>
-            <p>und keine Zusatzbelastung für erneuerbare Stromerzeugung.</p>
-          </div>
+          <div class="card"><h3>1. Keine neuen Erdgaskraftwerke</h3><p>Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.</p></div>
+          <div class="card"><h3>2. Ausbau Erneuerbarer beschleunigen</h3><p>und netzdienliche Erzeugung belohnen.</p></div>
+          <div class="card"><h3>3. Feste Einspeisevergütung beibehalten</h3><p>bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.</p></div>
+          <div class="card"><h3>4. Bestandsschutz</h3><p>und keine Zusatzbelastung für erneuerbare Stromerzeugung.</p></div>
         </div>
       </section>
 
@@ -239,16 +168,13 @@
         </div>
       </section>
 
-      <!-- Träger der Kampagne -->
+      <!-- Träger -->
       <section id="partner" class="partner">
         <h2>Träger der Kampagne</h2>
         <p>Die Kampagne wird von dem VEEG e.V. und der EWG durchgeführt.</p>
-
         <div class="orgs">
           <article class="org">
-            <div class="logoBox">
-              <img src="assets/veeglogo.svg" alt="VEEG e. V. – Verband EnergieErzeugende Gebäude">
-            </div>
+            <div class="logoBox"><img src="assets/veeglogo.svg" alt="VEEG e. V. – Verband EnergieErzeugende Gebäude"></div>
             <div>
               <h3>VEEG e. V. – Verband EnergieErzeugende Gebäude</h3>
               <p>Der VEEG e. V. fördert Gebäude als aktive Energieproduzenten – also solche, die ihren Energiebedarf selbst erzeugen, möglichst energiekostenfrei werden und Klimaschutz praktisch mitdenken.</p>
@@ -257,9 +183,7 @@
           </article>
 
           <article class="org">
-            <div class="logoBox">
-              <img src="assets/energywatchgroup.png" alt="Energy Watch Group (EWG)">
-            </div>
+            <div class="logoBox"><img src="assets/energywatchgroup.png" alt="Energy Watch Group (EWG)"></div>
             <div>
               <h3>Energy Watch Group (EWG)</h3>
               <p>Die Energy Watch Group (EWG) ist ein gemeinnütziger Think Tank, der sich dem Ziel verschrieben hat, die Klimakrise zu stoppen und die Erdatmosphäre wieder abzukühlen.</p>
@@ -268,90 +192,90 @@
           </article>
         </div>
       </section>
-
     </main>
 
     <footer class="site-footer middle">
-      <nav class="legal">
-        <a href="Impressum.html">Impressum</a> · <a href="Datenschutz.html">Datenschutz</a>
-      </nav>
+      <nav class="legal"><a href="Impressum.html">Impressum</a> · <a href="Datenschutz.html">Datenschutz</a></nav>
       <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom”</p>
     </footer>
-
   </div>
 
   <script>
-  // Smooth Scrolling
-  document.addEventListener('click', (e) => {
-    const a = e.target.closest('a[href^="#"]'); if(!a) return;
-    const el = document.querySelector(a.getAttribute('href'));
-    if (el) { e.preventDefault(); el.scrollIntoView({behavior:'smooth'}); }
-  });
+    // Smooth Scrolling
+    document.addEventListener('click', (e) => {
+      const a = e.target.closest('a[href^="#"]'); if(!a) return;
+      const el = document.querySelector(a.getAttribute('href'));
+      if (el) { e.preventDefault(); el.scrollIntoView({behavior:'smooth'}); }
+    });
 
-  // ---- Live-Zähler-Logik (PDFs) ----
-  const STATS_URL = '/api/stats.json';
+    // ---- Live-Zähler-Logik (PDFs) ----
+    const STATS_URL = '/api/stats.json';
 
-  function countUp(el, to, duration = 1200) {
-    const start = performance.now();
-    const from = 0;
-    const fmt = new Intl.NumberFormat('de-DE');
-    function frame(now) {
-      const t = Math.min(1, (now - start) / duration);
-      const eased = 1 - Math.pow(1 - t, 3);
-      const val = Math.round(from + (to - from) * eased);
-      el.textContent = fmt.format(val);
-      if (t < 1) requestAnimationFrame(frame);
-    }
-    requestAnimationFrame(frame);
-  }
-
-  function formatStandText(isoString) {
-    if (!isoString) return null;
-    const d = new Date(isoString);
-    if (isNaN(d)) return null;
-    const fmtDate = new Intl.DateTimeFormat('de-DE', { day:'2-digit', month:'2-digit' }).format(d);
-    const fmtTime = new Intl.DateTimeFormat('de-DE', { hour:'2-digit', minute:'2-digit' }).format(d);
-    return `Stand: ${fmtDate}, ${fmtTime} Uhr`;
-  }
-
-  async function loadCounter() {
-    const el = document.getElementById('sentCount');
-    const metaWrap = document.getElementById('statsMeta');
-    const metaText = document.getElementById('statsTime');
-    if (!el) return;
-
-    try {
-      const res = await fetch(STATS_URL + `?nocache=${Date.now()}`, { cache: 'no-store' });
-      if (!res.ok) throw new Error('HTTP ' + res.status);
-      const data = await res.json();
-      console.debug('stats.json ->', data); // <— Debug
-
-      // PDFs auslesen (mit Fallbacks)
-      const raw = Number(
-        data.pdfs_generated ?? data.count ?? data.sent_emails ?? 0
-      );
-      const value = Number.isFinite(raw) && raw >= 0 ? raw : 0;
-      countUp(el, value);
-
-      const stand = formatStandText(data.last_update);
-      if (stand && metaWrap && metaText) {
-        metaText.textContent = stand;
-        metaWrap.hidden = false;
-      } else if (metaWrap) {
-        metaWrap.hidden = true;
+    function countUp(el, to, duration = 1200) {
+      const fmt = new Intl.NumberFormat('de-DE');
+      if (!('requestAnimationFrame' in window) || duration <= 0) {
+        el.textContent = fmt.format(Math.max(0, Number(to)||0));
+        return;
       }
-    } catch (e) {
-      console.warn('Zähler konnte nicht geladen werden:', e);
-      el.textContent = '–';
-      if (metaWrap) metaWrap.hidden = true;
+      const start = performance.now();
+      const from = 0;
+      function frame(now) {
+        const t = Math.min(1, (now - start) / duration);
+        const eased = 1 - Math.pow(1 - t, 3);
+        const val = Math.round(from + (to - from) * eased);
+        el.textContent = fmt.format(val);
+        if (t < 1) requestAnimationFrame(frame);
+      }
+      requestAnimationFrame(frame);
     }
-  }
 
-  loadCounter();
-</script>
+    function formatStandText(isoString) {
+      if (!isoString) return null;
+      const d = new Date(isoString);
+      if (isNaN(d)) return null;
+      const fmtDate = new Intl.DateTimeFormat('de-DE', { day:'2-digit', month:'2-digit' }).format(d);
+      const fmtTime = new Intl.DateTimeFormat('de-DE', { hour:'2-digit', minute:'2-digit' }).format(d);
+      return `Stand: ${fmtDate}, ${fmtTime} Uhr`;
+    }
 
+    async function loadCounter() {
+      const el = document.getElementById('pdfCount');
+      const metaWrap = document.getElementById('statsMeta');
+      const metaText = document.getElementById('statsTime');
+      if (!el) return;
+
+      try {
+        const res = await fetch(STATS_URL + `?nocache=${Date.now()}`, { cache: 'no-store' });
+        if (!res.ok) throw new Error('HTTP ' + res.status);
+        const data = await res.json();
+        console.debug('stats.json ->', data);
+
+        // Zahl (neuer Key pdfs_generated, Fallbacks bleiben)
+        const raw = Number(data.pdfs_generated ?? data.count ?? data.sent_emails ?? 0);
+        const value = Number.isFinite(raw) && raw >= 0 ? raw : 0;
+        countUp(el, value);
+
+        // Zeitstempel anzeigen (neuer/alte Keys)
+        const stand = formatStandText(data.last_update || data.stats_updated_at || data.sent_emails_last_update);
+        if (stand && metaWrap && metaText) {
+          metaText.textContent = stand;
+          metaWrap.hidden = false;
+        } else if (metaWrap) {
+          metaWrap.hidden = true;
+        }
+      } catch (e) {
+        console.warn('Zähler konnte nicht geladen werden:', e);
+        el.textContent = '–';
+        if (metaWrap) metaWrap.hidden = true;
+      }
+    }
+
+    loadCounter();
+  </script>
 </body>
 </html>
+
+
 
 
 
