--- a/index.html
+++ b/index.html
@@ -67,6 +67,33 @@
 
     /* Footer */
     footer .legal { text-align:center; display:block; }
+    
+    /* --- Responsive Anpassung für das Header-Bild (Mobile View) --- */
+@media (max-width: 600px) {
+  .hero {
+    flex-direction: column;
+    padding: 16px 0;
+  }
+
+  .hero img {
+    max-width: 90%;
+    height: auto;
+    max-height: 140px;     /* <<< Bildhöhe begrenzen */
+    object-fit: contain;   /* sorgt für vollständige Darstellung */
+    margin: 0 auto;        /* zentriert das Bild horizontal */
+    display: block;
+  }
+
+  .hero h1 {
+    font-size: 1.4rem;     /* etwas kleinerer Titel */
+    line-height: 1.3;
+  }
+
+  .tagline {
+    font-size: 0.95rem;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -274,6 +301,7 @@
   </script>
 </body>
 </html>
+
 
 
 
