--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -22,7 +22,7 @@
       border-radius:0 0 16px 16px;
 
       /* Bundestag-Hintergrund */
-      background: url('assets/bundestag.jpg') center/cover no-repeat;
+      background: url('assets/Bundestag.jpg') center/cover no-repeat;
       /* Fallback-Farbe falls Bild noch lädt */
       background-color:#0a7d32;
       min-height: 220px;
@@ -614,6 +614,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
