--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -13,48 +13,50 @@
     .page { display:grid; grid-template-columns: 1fr minmax(0, var(--maxw)) 1fr; }
     .middle { grid-column:2; padding:16px; }
 
-    /* ---------- HERO mit Hintergrundbild + grünem Overlay ---------- */
+    /* ---------- HERO mit Hintergrundbild + Overlay + Weißer Card ---------- */
     .hero {
       position: relative;
-      display:flex; align-items:center; justify-content:center; gap:24px; flex-wrap:wrap;
-      padding:34px 16px 18px;
-      text-align:center; color:#fff;
+      display:flex; align-items:center; justify-content:center;
+      padding:44px 16px 28px;
+      text-align:center; color:#0a7d32;
       border-radius:0 0 16px 16px;
+      min-height: 260px;
 
-      /* Bundestag-Hintergrund */
       background: url('assets/Bundestag.jpg') center/cover no-repeat;
-      /* Fallback-Farbe falls Bild noch lädt */
-      background-color:#0a7d32;
-      min-height: 220px;
-      overflow: hidden; /* für runde Ecken + Overlay */
+      background-color:#0a7d32; /* Fallback */
+      overflow:hidden;
     }
-    /* grünes Verlaufs-Overlay */
+    /* dunkler Verlauf, damit Foto “ruhend” wirkt */
     .hero::before{
       content:"";
       position:absolute; inset:0;
-      background: linear-gradient(180deg, rgba(10,125,50,.62), rgba(6,95,38,.62));
-      /* macht den Grün-Look; Stärke per alpha anpassen */
+      background: radial-gradient(120% 80% at 50% 10%, rgba(0,0,0,.15), rgba(0,0,0,.35));
+      mix-blend-mode: multiply;
     }
-    /* Inhalt über dem Overlay rendern */
-    .hero > * { position: relative; z-index: 1; }
-
-    .hero a.logo { display:inline-block }
-    .hero img {
-      width:min(95vw, 540px);
-      max-width:540px;
+    /* Card mit Logo + Text */
+    .hero-card{
+      position:relative; z-index:1;
+      background:#ffffffee; /* leicht transparent */
+      backdrop-filter: blur(2px);
+      border-radius:18px;
+      box-shadow: 0 18px 40px rgba(0,0,0,.25);
+      padding:18px 22px;
+      display:flex; flex-direction:column; align-items:center; gap:10px;
+      max-width:min(92vw, 620px);
+    }
+    .hero .logo img{
+      width: clamp(220px, 60vw, 500px);
       height:auto; display:block;
-      filter:drop-shadow(0 6px 18px rgba(0,0,0,.25));
+      filter: drop-shadow(0 3px 10px rgba(0,0,0,.15));
     }
+    .tagline { margin:2px 0 0; font-size:1.02rem; color:#0a7d32; }
+    .cta { display:inline-block; margin-top:6px; padding:10px 16px; background:#0a7d32; color:#fff; text-decoration:none; border-radius:10px; font-weight:700; }
+    .cta.secondary { background:#e9f5f1; color:#0a7d32; }
 
-    .tagline { margin:8px 0 0; font-size:1.1rem; opacity:.98; text-shadow:0 1px 2px rgba(0,0,0,.25); }
-    .cta { display:inline-block; margin-top:10px; padding:10px 16px; background:#fff; color:#0a7d32; text-decoration:none; border-radius:10px; font-weight:700; }
-
-    /* Mobile-Optimierung: stärkeres Overlay & kleinere Abstände/Bild */
     @media (max-width:720px){
-      .hero { padding:22px 12px 14px; background-position:center 35%; }
-      .hero::before{ background: linear-gradient(180deg, rgba(10,125,50,.70), rgba(6,95,38,.70)); }
-      .hero img { width: clamp(200px, 70vw, 360px); }
-      .tagline { font-size:1rem; }
+      .hero { padding:28px 12px 18px; background-position:center 35%; }
+      .hero-card { padding:14px 16px; border-radius:14px; }
+      .tagline { font-size:.98rem; }
     }
 
     main.middle > section { margin:22px 0; }
@@ -87,12 +89,13 @@
   <div class="page">
     <header class="site-header middle">
       <div class="hero">
-        <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
-          <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
-        </a>
-        <div style="flex-basis:100%"></div>
-        <p class="tagline">Sie schreiben den Brief – wir übernehmen Ausdruck und Postversand an die Abgeordneten.</p>
-        <a class="cta" href="#brief">Brief einreichen</a>
+        <div class="hero-card" role="banner" aria-label="Kampagnen-Intro">
+          <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
+            <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+          </a>
+          <p class="tagline">Sie schreiben den Brief – wir übernehmen Ausdruck und Postversand an die Abgeordneten.</p>
+          <a class="cta" href="#brief">Brief einreichen</a>
+        </div>
       </div>
     </header>
 
@@ -214,7 +217,6 @@ Mit freundlichen Grüßen
                 <input id="copy_to_self" name="copy_to_self" type="checkbox" checked>
                 <span><strong>Kopie an mich</strong> per E-Mail senden</span>
               </label>
-              <!-- NEU: ZIP-Option für Absender:in -->
               <label class="opt">
                 <input id="copy_zip_to_self" name="copy_zip_to_self" type="checkbox" disabled>
                 <span>Falls mehrere Empfänger: <strong>alle Briefe als ZIP</strong> an mich</span>
@@ -392,13 +394,10 @@ Mit freundlichen Grüßen
   })();
   </script>
 
-  <!-- Zusatz-Empfänger -->
+  <!-- Zusatz-Empfänger (unchanged) -->
   <script type="module">
     async function loadJSON(p){ return fetch(p,{cache:'no-store'}).then(r=>r.json()); }
-    async function loadSeries(paths){
-      for (const p of paths){ try { const j = await loadJSON(p); if (j) return j; } catch(e){} }
-      return {};
-    }
+    async function loadSeries(paths){ for (const p of paths){ try { const j = await loadJSON(p); if (j) return j; } catch(e){} } return {}; }
     const byState = await loadSeries(['assets/data/mdb_by_state.json','/assets/data/mdb_by_state.json','mdb_by_state.json']);
     const byParty = await loadSeries(['assets/data/mdb_by_party.json','/assets/data/mdb_by_party.json','mdb_by_party.json']);
 
@@ -502,7 +501,7 @@ Mit freundlichen Grüßen
     };
   </script>
 
-  <!-- Tokens & Submit -->
+  <!-- Tokens & Submit (unchanged) -->
   <script>
   (function(){
     const $=(s)=>document.querySelector(s);
@@ -514,13 +513,9 @@ Mit freundlichen Grüßen
     const topPLZ=()=>($('#plz')?.value||'').trim();
     const topCity=()=>($('#city')?.value||'').trim();
 
-    const copyCB = document.getElementById('copy_to_self');
-    const zipCB  = document.getElementById('copy_zip_to_self');
-    function toggleZipEnable(){
-      if(!zipCB) return;
-      zipCB.disabled = !copyCB.checked;
-      if(zipCB.disabled) zipCB.checked = false;
-    }
+    const copyCB=document.getElementById('copy_to_self');
+    const zipCB=document.getElementById('copy_zip_to_self');
+    function toggleZipEnable(){ if(!zipCB) return; zipCB.disabled=!copyCB.checked; if(zipCB.disabled) zipCB.checked=false; }
     copyCB?.addEventListener('change', toggleZipEnable);
     document.addEventListener('DOMContentLoaded', toggleZipEnable);
 
@@ -614,6 +609,8 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
+
 
 
 
