--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -65,7 +65,7 @@
       <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
         <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
       </a>
-      <p class="tagline">Sie schreiben den Brief – wir übernehmen Ausdruck und Postversand an die Abgeordneten.</p>
+      <p class="tagline">Sie schreiben den Brief – wir übernehmen den weiteren Ablauf: Ausdruck und Zustellung an die Abgeordneten des deutschen Bundestages.</p>
       <a class="cta" href="#brief">Brief einreichen</a>
     </div>
   </div>
@@ -581,6 +581,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
